'True' fulltext search

--- a/Collectors/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container mt-4 pb-4">
     <h1>@Localizer["Log in"]</h1>
-    <div class="row white content p-5">
+    <div class="row white sign-content p-5">
         <div class="col-md-4">
             <section>
                 <form id="account" method="post">
