--- a/Collectors/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,7 @@
 <div class="container mt-4 pb-4">
     <h1>@SharedLocalizer["Register"]</h1>
 
-    <div class="row white content">
+    <div class="row white sign-content">
         <div class="col-md-4 p-5">
             <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
                 <h4>@Localizer["CreateAccount"]</h4>
