--- a/Collectors/Views/Collections/Edit.cshtml
+++ b/Collectors/Views/Collections/Edit.cshtml
@@ -15,7 +15,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <textarea rows="5" cols="60" asp-for="@Model.ShortDescription" placeholder="@Localizer["Modify the description"]"></textarea>
+                        <textarea rows="5" cols="60" class="form-control"
+                                  asp-for="@Model.ShortDescription" placeholder="@Localizer["Modify the description"]"></textarea>
                     </div>
                 </div>
 
@@ -24,7 +25,8 @@
                         <label>@Localizer["Current image"]:</label>
                         @if (Model.OldImage != null)
                         {
-                            <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.OldImage))" alt="@Localizer["View items"]" />
+                            <img class="card-img-top" src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.OldImage))" 
+                                 alt="@Localizer["View items"]" />
                         }
                         else
                         {
@@ -39,8 +41,8 @@
             <div class="form-group mt-5">
                 <h5>@Localizer["Change/Add the image of collection"]</h5>
                 <input name="Image" type="file" class="form-control m-2" />
-                <button class="btn btn-primary" type="submit">@Localizer["Finish"]</button>
-                <button class="btn btn-primary" name="ShouldDeleteImage" value="true" type="submit">
+                <button class="btn btn-primary m-2" type="submit">@Localizer["Finish"]</button>
+                <button class="btn btn-primary m-2" name="ShouldDeleteImage" value="true" type="submit">
                     @Localizer["Delete image and finish"]
                 </button>
             </div>
