--- a/Collectors/Views/Shared/_Layout.cshtml
+++ b/Collectors/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/tagify.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/profile.css" />
+    <link rel="stylesheet" href="~/css/darkmode.css" />
 </head>
 <body>
     <header class="darkmode-ignore w-100" style="background-color:#9209ce">
@@ -26,15 +26,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav mr-auto">
-
-                    <li class="nav-item">
-                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home"
-                           asp-action="Index">@Localizer["Home"]</a>
-                    </li>
-                    <li>
-                        <a class="nav-link text-light font-weight-bolder" asp-area="" asp-controller="Home"
-                           asp-action="Privacy">@Localizer["Privacy"]</a>
-                    </li>
                     <li>
                         <partial name="_SelectLanguagePartial" />
                     </li>
